--- a/src/partials/gobierno/5_altagerencia.html
+++ b/src/partials/gobierno/5_altagerencia.html
@@ -4,12 +4,383 @@
 >
   <h2>Alta gerencia</h2>
 
+  <!-- MODAL  -->
+  <dialog id="mod_1" class="modal-jd modal md:modal-middle">
+    <div class="modal-box">
+      <form method="dialog">
+        <button class="btn-close">✕</button>
+      </form>
+      <div class="modal_info">
+        <div class="modal_info_pic">
+          <img
+            src="/assets/images/altag/Patricia Restrepo .png"
+            alt="Patricia Restrepo"
+            class="crp"
+          />
+        </div>
+
+        <div class="modal_info_int">
+          <h4>Patricia Restrepo</h4>
+          <h6>CEO</h6>
+          <blockquote>
+            <p>
+              "Motivo y desafío a los integrantes de ASULADO para que a través
+              de la disciplina y creatividad transformemos la industria
+              aseguradora del país para que tenga un gran impacto social."
+            </p>
+          </blockquote>
+          <a
+            href="https://www.linkedin.com/in/patricia-restrepo-gutierrez-03ba2a18b/"
+            target="_blank"
+            ><i class="fa-brands fa-linkedin"></i
+          ></a>
+        </div>
+      </div>
+    </div>
+    <form method="dialog" class="modal-backdrop">
+      <button>Cerrar</button>
+    </form>
+  </dialog>
+
+  <dialog id="mod_2" class="modal-jd modal md:modal-middle">
+    <div class="modal-box">
+      <form method="dialog">
+        <button class="btn-close">✕</button>
+      </form>
+      <div class="modal_info">
+        <div class="modal_info_pic">
+          <img
+            src="/assets/images/altag/Gustavo Farrera.png"
+            alt="Gustavo Farrera"
+            class="crp"
+          />
+        </div>
+
+        <div class="modal_info_int">
+          <h4>Gustavo Farrera</h4>
+          <h6>Líder de Finanzas y Actuaría</h6>
+          <blockquote>
+            <p>
+              "Gestionamos los negocios de manera eficiente y responsable
+              cuidando los recursos a largo plazo y así garantizar los
+              beneficios a nuestros clientes. Además, impulsamos la visión
+              estratégica y el crecimiento sostenible, analizando posibles
+              riesgos y oportunidades para garantizar la solvencia y viabilidad
+              de la compañía."
+            </p>
+          </blockquote>
+          <a
+            href="https://www.linkedin.com/in/gustavo-farrera-06321799/"
+            target="_blank"
+            ><i class="fa-brands fa-linkedin"></i
+          ></a>
+        </div>
+      </div>
+    </div>
+    <form method="dialog" class="modal-backdrop">
+      <button>Cerrar</button>
+    </form>
+  </dialog>
+
+  <dialog id="mod_3" class="modal-jd modal md:modal-middle">
+    <div class="modal-box">
+      <form method="dialog">
+        <button class="btn-close">✕</button>
+      </form>
+      <div class="modal_info">
+        <div class="modal_info_pic">
+          <img
+            src="/assets/images/altag/Liliana Ríos .png"
+            alt="Liliana Ríos "
+            class="crp"
+          />
+        </div>
+
+        <div class="modal_info_int">
+          <h4>Liliana Ríos </h4>
+          <h6>Líder de Transformación</h6>
+          <blockquote>
+            <p>
+              "Promovemos la transformación de la compañía para que opere de
+              manera digital, gestionando los proyectos a partir de la
+              estrategia, potenciando la innovación, automatización y mejora de
+              los procesos. Somos un engranaje, que pone a disposición las
+              herramientas para que los equipos materialicen cada idea. Somos
+              los embajadores de la marca y la llevamos hasta cada uno de
+              nuestros públicos de interés, con el objetivo de dar a conocer su
+              esencia y propósito dentro de la industria"
+            </p>
+          </blockquote>
+          <a
+            href="https://www.linkedin.com/in/liliana-rios-rios-00101647/"
+            target="_blank"
+            ><i class="fa-brands fa-linkedin"></i
+          ></a>
+        </div>
+      </div>
+    </div>
+    <form method="dialog" class="modal-backdrop">
+      <button>Cerrar</button>
+    </form>
+  </dialog>
+
+  <dialog id="mod_4" class="modal-jd modal md:modal-middle">
+    <div class="modal-box">
+      <form method="dialog">
+        <button class="btn-close">✕</button>
+      </form>
+      <div class="modal_info">
+        <div class="modal_info_pic">
+          <img
+            src="/assets/images/altag/Mauricio Hernández.png"
+            alt="Mauricio Hernández"
+            class="crp"
+          />
+        </div>
+
+        <div class="modal_info_int">
+          <h4>Sergio Mauricio Hernández Zapata</h4>
+          <h6>Líder de Operaciones y Servicios</h6>
+          <blockquote>
+            <p>
+              "A través de un equipo integral y competente y utilizando nuevas
+              capacidades tecnológicas, materializamos la propuesta de valor al
+              cliente desde la innovación y la eficiencia, garantizando la
+              operación de ASULADO y poniendo a disposición de nuestros
+              usuarios, canales de atención digitales con calidad y oportunidad
+              que promueven la continuidad y sostenibilidad de la compañía."
+            </p>
+          </blockquote>
+          <a
+            href="https://www.linkedin.com/in/sergio-mauricio-hern%C3%A1ndez-zapata-4728691b6/"
+            target="_blank"
+            ><i class="fa-brands fa-linkedin"></i
+          ></a>
+        </div>
+      </div>
+    </div>
+    <form method="dialog" class="modal-backdrop">
+      <button>Cerrar</button>
+    </form>
+  </dialog>
+
+  <dialog id="mod_5" class="modal-jd modal md:modal-middle">
+    <div class="modal-box">
+      <form method="dialog">
+        <button class="btn-close">✕</button>
+      </form>
+      <div class="modal_info">
+        <div class="modal_info_pic">
+          <img
+            src="/assets/images/altag/Alejandra Osorio.png"
+            alt="Alejandra Osorio"
+            class="crp"
+          />
+        </div>
+
+        <div class="modal_info_int">
+          <h4>Alejandra Osorio</h4>
+          <h6>Líder de Talento Humano</h6>
+          <blockquote>
+            <p>
+              "Fidelizar y desarrollar el talento humano extraordinario de
+              ASULADO es nuestro propósito. Cuidando la experiencia y
+              garantizando una oferta de valor al empleado, potenciamos el
+              compromiso y favorecemos una cultura sólida y coherente que
+              apalanca el logro de los objetivos, tanto de la organización, como
+              de sus integrantes. Aquí, más que hacer parte de una compañía, es
+              la oportunidad para ser impulsores del cambio, motivados por un
+              propósito misional que impacta a toda una industria y un país"
+            </p>
+          </blockquote>
+          <a
+            href="https://www.linkedin.com/in/luisa-alejandra-osorio-callejas-32a6aa15/"
+            target="_blank"
+            ><i class="fa-brands fa-linkedin"></i
+          ></a>
+        </div>
+      </div>
+    </div>
+    <form method="dialog" class="modal-backdrop">
+      <button>Cerrar</button>
+    </form>
+  </dialog>
+
+  <dialog id="mod_6" class="modal-jd modal md:modal-middle">
+    <div class="modal-box">
+      <form method="dialog">
+        <button class="btn-close">✕</button>
+      </form>
+      <div class="modal_info">
+        <div class="modal_info_pic">
+          <img
+            src="/assets/images/altag/Diana Ramírez.png"
+            alt="Diana Ramírez"
+            class="crp"
+          />
+        </div>
+
+        <div class="modal_info_int">
+          <h4>Diana Ramírez</h4>
+          <h6>Líder de Auditoría</h6>
+          <blockquote>
+            <p>
+              "Inspiramos a los demás para trabajar bajo los pilares de la
+              confianza y la transparencia para asegurar, desde el
+              acompañamiento, el cumplimiento normativo y la adecuada gestión
+              del sistema del control interno. Representamos a un área que está
+              en permanente contacto con los equipos, junto a ellos lideramos y
+              ejecutamos auditorías de los riesgos identificados y potenciales
+              que impactan a la Compañía"
+            </p>
+          </blockquote>
+          <a
+            href="https://www.linkedin.com/in/diana-ram%C3%ADrez-rojas-9348491a7/"
+            target="_blank"
+            ><i class="fa-brands fa-linkedin"></i
+          ></a>
+        </div>
+      </div>
+    </div>
+    <form method="dialog" class="modal-backdrop">
+      <button>Cerrar</button>
+    </form>
+  </dialog>
+
+  <dialog id="mod_7" class="modal-jd modal md:modal-middle">
+    <div class="modal-box">
+      <form method="dialog">
+        <button class="btn-close">✕</button>
+      </form>
+      <div class="modal_info">
+        <div class="modal_info_pic">
+          <img
+            src="/assets/images/altag/Julián Jaramillo.png"
+            alt="Julián Jaramillo"
+            class="crp"
+          />
+        </div>
+
+        <div class="modal_info_int">
+          <h4>Julián Jaramillo</h4>
+          <h6>Líder de Riesgos</h6>
+          <blockquote>
+            <p>
+              "Contribuimos al propósito superior de la organización
+              implementando estrategias y controles que mitiguen los riesgos
+              técnicos, estratégicos, operacionales y tecnológicos que pueda
+              enfrentar la Compañía. Trabajamos con todos los equipos de
+              ASULADO, a quienes acompañamos en la identificación y la
+              prevención de los riesgos a los que se enfrenta la organización,
+              para estar preparados a posibles desafíos y saberlos enfrentar de
+              manera analítica, informada y efectiva"
+            </p>
+          </blockquote>
+          <a
+            href="https://www.linkedin.com/in/juli%C3%A1n-jaramillo-jaramillo-0006a658/"
+            target="_blank"
+            ><i class="fa-brands fa-linkedin"></i
+          ></a>
+        </div>
+      </div>
+    </div>
+    <form method="dialog" class="modal-backdrop">
+      <button>Cerrar</button>
+    </form>
+  </dialog>
+
+  <dialog id="mod_8" class="modal-jd modal md:modal-middle">
+    <div class="modal-box">
+      <form method="dialog">
+        <button class="btn-close">✕</button>
+      </form>
+      <div class="modal_info">
+        <div class="modal_info_pic">
+          <img
+            src="/assets/images/altag/Johana Lizarazo.png"
+            alt="Johana Lizarazo"
+            class="crp"
+          />
+        </div>
+
+        <div class="modal_info_int">
+          <h4>Johana Lizarazo</h4>
+          <h6>Líder de Tecnología y Datos</h6>
+          <blockquote>
+            <p>
+              Fomentamos la evolución tecnológica con el fin de optimizar la
+              eficiencia operativa, incrementar el valor y fortalecer la
+              sostenibilidad del negocio. Logramos este propósito al incorporar
+              tecnologías avanzadas, soluciones emergentes, analítica de datos y
+              ciberseguridad en los procesos de la compañía para operar
+              digitalmente, manteniendo siempre la alineación con los objetivos
+              estratégicos de ASULADO.
+            </p>
+          </blockquote>
+          <a
+            href="https://www.linkedin.com/in/johana-karina-lizarazo-vera-b986883a/"
+            target="_blank"
+            ><i class="fa-brands fa-linkedin"></i
+          ></a>
+        </div>
+      </div>
+    </div>
+    <form method="dialog" class="modal-backdrop">
+      <button>Cerrar</button>
+    </form>
+  </dialog>
+
+  <dialog id="mod_9" class="modal-jd modal md:modal-middle">
+    <div class="modal-box">
+      <form method="dialog">
+        <button class="btn-close">✕</button>
+      </form>
+      <div class="modal_info">
+        <div class="modal_info_pic">
+          <img
+            src="/assets/images/altag/Sebastián Mejía.png"
+            alt="Sebastián Mejía"
+            class="crp"
+          />
+        </div>
+
+        <div class="modal_info_int">
+          <h4>Sebastián Mejía</h4>
+          <h6>Líder Jurídico</h6>
+          <blockquote>
+            <p>
+              "Mas allá de buscar la seguridad jurídica en la compañía,
+              brindamos confianza, protegemos los intereses de la organización y
+              sus públicos de interés, lo hacemos asegurando el cumplimiento del
+              marco legal y código de buen gobierno corporativo. Somos aliados
+              estratégicos del negocio, buscando nuevas oportunidades e incidir
+              en la regulación a favor de las necesidades de la compañía, de
+              nuestros afiliados y la industria."
+            </p>
+          </blockquote>
+          <a
+            href="https://www.linkedin.com/in/sebastian-mejia-aramburo/"
+            target="_blank"
+            ><i class="fa-brands fa-linkedin"></i
+          ></a>
+        </div>
+      </div>
+    </div>
+    <form method="dialog" class="modal-backdrop">
+      <button>Cerrar</button>
+    </form>
+  </dialog>
+
   <ul class="g-alta">
     <li>
       <img
         src="/assets/images/altag/Patricia Restrepo .png"
         alt="Patricia Restrepo"
       />
+      <button onclick="mod_1.showModal()">
+        <i class="q fa-solid fa-quotes"></i>
+        <i class="a fa-regular fa-arrow-right"></i>
+      </button>
       <h4>Patricia Restrepo</h4>
       <p>CEO</p>
     </li>
@@ -18,11 +389,19 @@
         src="/assets/images/altag/Gustavo Farrera.png"
         alt="Gustavo Farrera"
       />
+      <button onclick="mod_2.showModal()">
+        <i class="q fa-solid fa-quotes"></i>
+        <i class="a fa-regular fa-arrow-right"></i>
+      </button>
       <h4>Gustavo Farrera</h4>
       <p>Líder de Finanzas y Actuaría</p>
     </li>
     <li>
       <img src="/assets/images/altag/Liliana Ríos .png" alt="Liliana Ríos " />
+      <button onclick="mod_3.showModal()">
+        <i class="q fa-solid fa-quotes"></i>
+        <i class="a fa-regular fa-arrow-right"></i>
+      </button>
       <h4>Liliana Ríos </h4>
       <p>Líder de Transformación</p>
     </li>
@@ -31,7 +410,11 @@
         src="/assets/images/altag/Mauricio Hernández.png"
         alt="Mauricio Hernández"
       />
-      <h4>Mauricio Hernández</h4>
+      <button onclick="mod_4.showModal()">
+        <i class="q fa-solid fa-quotes"></i>
+        <i class="a fa-regular fa-arrow-right"></i>
+      </button>
+      <h4>Sergio Mauricio Hernández</h4>
       <p>Líder de Operaciones y Servicios</p>
     </li>
     <li>
@@ -39,14 +422,19 @@
         src="/assets/images/altag/Alejandra Osorio.png"
         alt="Alejandra Osorio"
       />
+      <button onclick="mod_5.showModal()">
+        <i class="q fa-solid fa-quotes"></i>
+        <i class="a fa-regular fa-arrow-right"></i>
+      </button>
       <h4>Alejandra Osorio</h4>
       <p>Líder de Talento Humano</p>
     </li>
     <li>
-      <img
-        src="/assets/images/altag/Diana Ramírez.png"
-        alt="Alejandra Osorio"
-      />
+      <img src="/assets/images/altag/Diana Ramírez.png" alt="Diana Ramírez" />
+      <button onclick="mod_6.showModal()">
+        <i class="q fa-solid fa-quotes"></i>
+        <i class="a fa-regular fa-arrow-right"></i>
+      </button>
       <h4>Diana Ramírez</h4>
       <p>Líder de Auditoría</p>
     </li>
@@ -56,24 +444,34 @@
         alt="Julián
         Jaramillo"
       />
+      <button onclick="mod_7.showModal()">
+        <i class="q fa-solid fa-quotes"></i>
+        <i class="a fa-regular fa-arrow-right"></i>
+      </button>
       <h4>Julián Jaramillo</h4>
       <p>Líder de Riesgos</p>
     </li>
     <li>
       <img
         src="/assets/images/altag/Johana Lizarazo.png"
-        alt="Johana
-        Lizarazo"
+        alt="Johana Lizarazo"
       />
+      <button onclick="mod_8.showModal()">
+        <i class="q fa-solid fa-quotes"></i>
+        <i class="a fa-regular fa-arrow-right"></i>
+      </button>
       <h4>Johana Lizarazo</h4>
       <p>Líder de Tecnología y Datos</p>
     </li>
     <li>
       <img
         src="/assets/images/altag/Sebastián Mejía.png"
-        alt="Sebastián
-        Mejía"
+        alt="Sebastián Mejía"
       />
+      <button onclick="mod_9.showModal()">
+        <i class="q fa-solid fa-quotes"></i>
+        <i class="a fa-regular fa-arrow-right"></i>
+      </button>
       <h4>Sebastián Mejía</h4>
       <p>Líder Jurídico</p>
     </li>
