--- a/src/partials/PORTAL/p_header.html
+++ b/src/partials/PORTAL/p_header.html
@@ -122,7 +122,7 @@
     <div class="as__nav_wrap h_tools">
       <div id="nav_search" class="as__nav_search">
         <i class="as__nav_search_ico fa-solid fa-magnifying-glass"></i>
-        <form action="">
+        <form action="/PORTAL/busqueda_1.html">
           <input type="text" placeholder="Buscar" />
           <button><i class="fa-solid fa-magnifying-glass"></i></button>
         </form>
