--- a/src/partials/educacion/faq_2.html
+++ b/src/partials/educacion/faq_2.html
@@ -3,17 +3,14 @@
   <ol class="fqs">
     <li class="fqs_list">
       <div class="fqs_list_int">
-        <h4>
-          ¿El capital de la Renta Vitalicia con la aseguradora es heredable?
-        </h4>
+        <h4>¿Qué es?</h4>
         <div class="fqs_info">
           <p>
-            En ASULADO Seguros de Vida tu Renta Vitalicia es una póliza y no una
-            cuenta de ahorro individual, cuando el pensionado o el último de sus
-            beneficiarios fallece o se dejan de cumplir con los requisitos
-            establecidos por la ley, y además no existen otros beneficiarios
-            para sustituir el derecho a la pensión, la póliza se finaliza y el
-            capital no será heredable.
+            Es un seguro cuyo objetivo es garantizar a los cotizantes a pensión el pago de una pensión en caso de invalidez o a sus beneficiarios en caso de fallecimiento, siempre que estas circunstancias se deban a una enfermedad o accidente de origen común, es decir, no laboral.
+Fuente: Fasecolda
+          </p>
+          <p>
+            <b class="font-bold">Fuente: Fasecolda</b>
           </p>
         </div>
       </div>
@@ -21,21 +18,22 @@
     <li class="fqs_list">
       <div class="fqs_list_int">
         <h4>
-          Si soy cónyuge o compañero (a) permanente menor de 30 años, ¿sería
-          beneficiario vitalicio de una pensión de sobrevivencia?
+          ¿Quién está protegido por este seguro?
         </h4>
         <div class="fqs_info">
           <p>
-            La pensión de sobrevivencia hace referencia a la prestación
-            económica que tiene derecho el grupo familiar del pensionado. Según
-            el Artículo 13 de la Ley 797 de 2003 en modificación del Artículo 74
-            de la Ley 100 de 1993, establece que el pago de la mesada se hará de
-            manera temporal si el beneficiario con condición de cónyuge o
-            compañero (a) permanente es menor de 30 años y no tiene hijos en
-            común con el fallecido, cumpliendo esta condición, el pago de la
-            mesada se hará solo por 20 años. Por su parte, si el cónyuge o
-            compañero (a) permanente es menor de 30 años y tiene hijos en común
-            con el fallecido, el pago de la mesada se hará de manera vitalicia.
+            Están protegidos los afiliados a las Administradoras de Fondos de Pensiones (AFP) que cumplen ciertas condiciones. Es importante aclarar que estas condiciones pueden cambiar con el tiempo:
+          </p>
+          <p>
+            <ol>
+              <li>1. Contar con un mínimo de 50 semanas cotizadas al sistema de Pensiones en los últimos 3 años anteriores a la fecha de su fallecimiento o de su invalidez.</li>
+              <li>2. En caso de invalidez, si es menor de 20 años, solo debe haber cotizado 26 semanas en el último año anterior al hecho causante de su invalidez o fallecimiento.</li>
+              <li>3. En caso de invalidez, si el beneficiario ha cotizado al menos el 75% de las semanas mínimas requeridas para acceder a la pensión por vejez, solo necesita 25 semanas en los últimos 3 años..</li>
+              <li>4. En caso de pensión de sobrevivencia, los beneficiarios accederán al pago de la pensión si el afiliado cotizó el número de semanas mínimo requerido en el régimen de prima media, sin que haya tramitado o recibido una indemnización sustitutiva de la pensión de vejez o la devolución de saldos.</li>
+            </ol>
+          </p>
+          <p>
+            <b class="font-bold">Fuente: Fasecolda</b>
           </p>
         </div>
       </div>
@@ -43,26 +41,22 @@
     <li class="fqs_list">
       <div class="fqs_list_int">
         <h4>
-          En caso de que mi familiar pensionado por invalidez fallezca, ¿qué
-          documentos debo aportar para mi pensión?
+          ¿Cómo se considera a una persona inválida y qué beneficio recibe?
         </h4>
         <div class="fqs_info">
           <p>
-            Conoce la documentación requerida para la sustitución pensional
-            según sea tu caso,
-            <a
-              href="/assets/documentos/LISTA-DOCUMENTAL-SUSTITUCION-PENSIONAL.pdf"
-              target="_blank"
-              class="underline text-azul-bold font-bold underline-offset-2"
-              >ingresando aquí</a
-            >. Adicional, recuerda diligenciar la solicitud de sustitución
-            pensional
-            <a
-              href="/assets/documentos/SOLICITUD-SUSTITUCION-PENSIONAL-ASULADO.pdf"
-              target="_blank"
-              class="underline text-azul-bold font-bold underline-offset-2"
-              >descarga aquí</a
-            >.
+            Se debe tener una pérdida de la capacidad laboral superior al 50%. Este porcentaje lo define la Compañía Aseguradora o las Juntas Regionales y Nacional de calificación de invalidez.
+          </p>
+          <p>El beneficio que se otorga corresponde al pago de una pensión vitalicia que depende del porcentaje de la pérdida de capacidad laboral y del número de semanas cotizadas al momento del siniestro.</p>
+          <p>
+            <ul>
+              <li>Si la pérdida de capacidad laboral es igual o superior al 50% e inferior al 66%, la pensión será del 45% del promedio de los últimos 10 años del salario sobre el cual se cotizó (IBL), más el 1.5% adicional por cada 50 semanas adicionales a las primeras 500.</li>
+              <li>Si la pérdida de capacidad laboral es igual o superior al 66%, la pensión será del 54% del IBL más 2% adicional por cada 50 semanas adicionales de las primeras 800.</li>
+              <li>En ningún caso la pensión podrá ser inferior al Salario Mínimo Legal mensual vigente ni superior al 75% del IBL.</li>
+            </ul>
+          </p>
+          <p>
+            <b class="font-bold">Fuente: Fasecolda</b>
           </p>
         </div>
       </div>
@@ -70,69 +64,55 @@
     <li class="fqs_list">
       <div class="fqs_list_int">
         <h4>
-          ¿Debo presentar certificado de supervivencia por ser pensionado?
+          ¿Quiénes pueden ser los beneficiarios?
         </h4>
         <div class="fqs_info">
           <p>
-            Según el Artículo 36 del Decreto Ley 2106 de 2019, los pensionados
-            por invalidez y sobrevivencia que residen en el exterior deberán
-            probar su supervivencia ante las entidades que forman parte del
-            Sistema General de Seguridad Social Integral cada seis (6) meses.
+            Podrán ser beneficiarios de la pensión por sobrevivencia las siguientes personas del grupo familiar:
+De forma vitalicia:
+          </p>
+          <p>
+            <ul>
+              <li>El cónyuge o compañero permanente mayor de 30 años o menor de 30 años si tiene hijos con el beneficiario y los hijos están en condición de invalidez al momento del siniestro.</li>
+            </ul>
+          </p>
+          <p>De forma temporal:</p>
+          <p>
+            <ul>
+              <li>El cónyuge o compañero permanente mayor de 30 años, o menor de 30 años si ha tenido hijos con el causante y los hijos inválidos al momento del siniestro.</li>
+              <li>Los hijos menores de 18 años y los hijos entre 18 y 25 años si dependían económicamente del fallecido y están estudiando.</li>
+              <li>A falta de los anteriores, los padres que dependían económicamente al momento del fallecimiento recibirán el beneficio.</li>
+              <li>A falta de los anteriores, los hermanos en condición de invalidez si dependían económicamente al momento del fallecimiento.</li>
+            </ul>
+          </p>
+          <p>
+            <b class="font-bold">Fuente: Fasecolda</b>
           </p>
         </div>
       </div>
     </li>
     <li class="fqs_list">
       <div class="fqs_list_int">
-        <h4>Después de estar pensionado, ¿seré calificado nuevamente?</h4>
+        <h4>¿Cuáles son los derechos y deberes que tiene el tomador y/o asegurado frente a una compañía de seguros?</h4>
         <div class="fqs_info">
           <p>
-            Según las condiciones actuales de tu calificación de invalidez, cada
-            3 años podrás ser recalificado según lo establecido en el Artículo
-            44 de la Ley 100 de 1993 o demás leyes o normas que lo sustituyan o
-            complementen.
+            La ley ha dado derechos y deberes a las personas que usan productos o servicios financieros, como por ejemplo los clientes de una aseguradora.
+            Haz clic aquí para conocer esos derechos y deberes.
           </p>
         </div>
       </div>
     </li>
     <li class="fqs_list">
       <div class="fqs_list_int">
-        <h4>¿Qué es una sustitución pensional?</h4>
+        <h4>Más información</h4>
         <div class="fqs_info">
           <p>
-            La sustitución pensional es una prestación que se otorga a los
-            beneficiarios de un pensionado por invalidez, que ha fallecido. Esta
-            prestación permite sustituir el derecho a la pensión. Para acceder a
-            la sustitución pensional, se valida la condición de los
-            beneficiarios en el momento del fallecimiento.
+            ¿Quieres profundizar aún más? ¡Descarga la cartilla de Fasecolda sobre Seguro Previsional! Esta es una guía que te ayudará a aprender mucho más sobre este producto financiero.
           </p>
+          <p>Haz clic aquí para acceder a la cartilla.</p>
         </div>
       </div>
     </li>
-    <li class="fqs_list">
-      <div class="fqs_list_int">
-        <h4>
-          Si soy pensionado por invalidez y llegara a fallecer, ¿qué pasaría con
-          los beneficiarios de mi pensión?
-        </h4>
-        <div class="fqs_info">
-          <p>
-            En el caso de las pensiones por sobrevivencia se redistribuirán en
-            función del parentesco que acredite el beneficiario, de acuerdo con
-            el artículo 47 de la Ley 100 de 1993 y demás normas que le
-            sustituyan o complementen.
-          </p>
-          <p>
-            Los beneficiarios entrarían en un proceso de evaluación de
-            sustitución pensional, si tienen derecho y según sea su caso,
-            seguirán recibiendo la mesada pensional. Lo anterior aplicaría para
-            los beneficiarios hijos entre los 18 a 25 años, que acrediten la
-            calidad de estudiantes y si los hijos se encuentran en condición de
-            invalidez tendrán derecho de manera vitalicia. Esta mesada se
-            incrementará cada año según el IPC o el salario mínimo.
-          </p>
-        </div>
-      </div>
-    </li>
+ 
   </ol>
 </li>
