--- a/src/partials/educacion/tabs.html
+++ b/src/partials/educacion/tabs.html
@@ -2,16 +2,17 @@
   <div id="faqs">
     <div class="as__section_wrapper full">
       <div class="as__section_content_full as__g_educacion_tabs_int">
-        <p class="mb-4 text-azul-dark">
-          Selecciona el producto sobre el cual te quieres informar:
-        </p>
+       
         <div class="as__doc_tabs_small">
-          <label for="tabs">Selecciona el tema</label>
+          <label for="tabs"> Selecciona el producto sobre el cual te quieres informar: </label>
           <select id="docs_tabs">
             <option value="0">Renta Vitalicia</option>
             <option value="1">Seguro Previsional</option>
           </select>
         </div>
+        <p class="hidden md:block mb-4 text-azul-dark">
+          Selecciona el producto sobre el cual te quieres informar:
+        </p>
         <ul class="as__doc_tabs">
           <li class="w-full">
             <a
