--- a/src/partials/educacion/faq_1.html
+++ b/src/partials/educacion/faq_1.html
@@ -3,28 +3,106 @@
   <ol class="fqs">
     <li class="fqs_list">
       <div class="fqs_list_int">
-        <h4>¿Por qué nace una nueva compañía como ASULADO Seguros de Vida?</h4>
+        <h4>¿Qué es?</h4>
         <div class="fqs_info">
           <p>
-            Somos ASULADO Seguros de Vida, una filial de SURA Asset Management.
-            Nacimos en diciembre de 2022 para consolidarnos como la compañía que
-            dinamiza el mercado asegurador en Colombia, donde complementamos la
-            oferta de aseguramiento para la etapa de retiro y desacumulación.
+            Modalidad de pensión que se contrata con una Aseguradora de Vida, en la cual los pensionados reciben de forma periódica el pago de su renta pensional siempre que cumplan con los requisitos establecidos en la normatividad vigente. La renta mensual incrementa de forma anual en el mes de enero de cada año de acuerdo con el IPC o al Salario Mínimo Mensual Legal Vigente (SMMLV), según el caso.
           </p>
           <p>
-            Además de complementar el sistema pensional en Colombia, existimos
-            para ofrecer bienestar, tranquilidad, innovación y acompañamiento a
-            miles de colombianos, a través de la gestión de activos y
-            administración de productos de desacumulación patrimonial , como son
-            las soluciones de Rentas Vitalicias y Seguros Previsionales.
-          </p>
-          <p>
-            Miramos el futuro con optimismo, responsabilidad y sostenibilidad y
-            seremos tu aliado para transformar esfuerzos de vida en beneficios
-            garantizados que generan tranquilidad y libertad.
+            <b class="font-bold">Fuente: Fasecolda</b>
           </p>
         </div>
       </div>
     </li>
+    <li class="fqs_list">
+      <div class="fqs_list_int">
+        <h4>¿Quiénes son beneficiarios?</h4>
+        <div class="fqs_info">
+          <p>
+           <ul>
+            <li>El cónyuge o compañero(a) permanente siempre que acredite haber tenido vida marital hasta el fallecimiento del pensionado y haber convivido más de 5 años continuos.</li>
+           </ul>
+          </p>
+          <p>La pensión se otorga de por vida, a menos que el cónyuge o compañero(a) tenga menos de 30 años al momento del fallecimiento y no tenga hijos, en ese caso la pensión será por 20 años.</p>
+          <p>
+            Los siguientes familiares pueden ser beneficiarios siempre que dependan económicamente del pensionado:
+          </p>
+          <p>
+            <ol>
+              <li>1. Hijos menores de 18 años o menores de 25 años que estén estudiando.</li>
+              <li>2. Hijos en condición de invalidez.</li>
+              <li>3. A falta de los anteriores, los padres.</li>
+              <li>4. A falta de los anteriores, los hermanos en condición de invalidez.</li>
+            </ol>
+          </p>
+          <p>La pensión de sobrevivencia equivale al 100% de la pensión que recibía el pensionado al momento de su fallecimiento y se reparte entre los beneficiarios de ley.</p>
+          <p>
+            <b class="font-bold">Fuente: Fasecolda</b>
+          </p>
+         
+        </div>
+      </div>
+    </li>
+    <li class="fqs_list">
+      <div class="fqs_list_int">
+        <h4>¿Es una pensión o un seguro?</h4>
+        <div class="fqs_info">
+          <p>
+            En la práctica, la Renta Vitalicia es similar a una pensión pues es un pago que el pensionado recibe hasta su fallecimiento y crece con el IPC o con SMMLV. Sin embargo, la Renta Vitalicia es un seguro ofrecido únicamente por compañías aseguradoras y ofrece todas las garantías de un contrato de seguro.
+          </p>
+          <p>
+            <b class="font-bold">Fuente: Fasecolda</b>
+          </p>
+        </div>
+      </div>
+    </li>
+
+    <li class="fqs_list">
+      <div class="fqs_list_int">
+        <h4>¿Qué riesgos cubre?</h4>
+        <div class="fqs_info">
+          <p>
+            La Renta Vitalicia cubre varios riesgos de los que no siempre somos conscientes:
+          </p>
+          <p>
+            <ol>
+              <li><b class="font-bold">Riesgo de extralongevidad:</b>  es la posibilidad de vivir más tiempo del previsto y que se agoten los ahorros que se tienen previstos para la pensión.</li>
+              <li><b class="font-bold">Riesgo financiero:</b> al obtener una Renta Vitalicia, la compañía aseguradora se encarga de gestionar y administrar el dinero y de que el pensionado siempre reciba su pensión acordada.</li>
+              <li><b class="font-bold">Riesgo de pérdida del valor adquisitivo:</b> al adquirir una Renta Vitalicia, la compañía aseguradora garantiza que el pensionado reciba una pensión actualizada con el IPC o el SMLMV todos los años.</li>
+            </ol>
+          </p>
+          <p>
+            <b class="font-bold">Fuente: Fasecolda</b>
+          </p>
+        </div>
+      </div>
+    </li>
+
+    <li class="fqs_list">
+      <div class="fqs_list_int">
+        <h4>¿Cuáles son los derechos y deberes que tiene el tomador y/o asegurado frente a una compañía de seguros?</h4>
+        <div class="fqs_info">
+          <p>
+            La ley ha dado derechos y deberes a las personas que usan productos o servicios financieros, como por ejemplo los clientes de una aseguradora.
+Haz clic aquí para conocer esos derechos y deberes.
+          </p>
+       
+        </div>
+      </div>
+    </li>
+
+    <li class="fqs_list">
+      <div class="fqs_list_int">
+        <h4>Más información</h4>
+        <div class="fqs_info">
+          <p>
+            ¿Quieres profundizar aún más? ¡Descarga la cartilla de Fasecolda sobre Renta Vitalicia! Esta es una guía que te ayudará a aprender mucho más sobre este producto financiero.
+          </p>
+          <p>Haz clic aquí para acceder a la cartilla.</p>
+       
+        </div>
+      </div>
+    </li>
+
   </ol>
 </li>
