Cambios Footer g EF

--- a/src/partials/educacion/faq_2.html
+++ b/src/partials/educacion/faq_2.html
@@ -97,7 +97,7 @@ De forma vitalicia:
         <div class="fqs_info">
           <p>
             La ley ha dado derechos y deberes a las personas que usan productos o servicios financieros, como por ejemplo los clientes de una aseguradora.
-            Haz clic aquí para conocer esos derechos y deberes.
+            <a href="https://www.asulado.com/ConsumidorFinanciero" style="text-decoration: underline; color:#273e82;"><b class="font-bold">Haz clic aquí</b></a> para conocer esos derechos y deberes.
           </p>
         </div>
       </div>
@@ -109,7 +109,7 @@ De forma vitalicia:
           <p>
             ¿Quieres profundizar aún más? ¡Descarga la cartilla de Fasecolda sobre Seguro Previsional! Esta es una guía que te ayudará a aprender mucho más sobre este producto financiero.
           </p>
-          <p>Haz clic aquí para acceder a la cartilla.</p>
+          <p><a href="https://www.vivasegurofasecolda.com/cms/wp-content/uploads/2018/12/seguro_rentas_vitalicias.pdf" style="text-decoration: underline; color:#273e82;"><b class="font-bold">Haz clic aquí</b></a> para acceder a la cartilla.</p>
         </div>
       </div>
     </li>
