--- a/src/partials/educacion/faq_1.html
+++ b/src/partials/educacion/faq_1.html
@@ -84,7 +84,7 @@
         <div class="fqs_info">
           <p>
             La ley ha dado derechos y deberes a las personas que usan productos o servicios financieros, como por ejemplo los clientes de una aseguradora.
-Haz clic aquí para conocer esos derechos y deberes.
+<a href="https://www.asulado.com/ConsumidorFinanciero" style="text-decoration: underline; color:#273e82;"><b class="font-bold">Haz clic aquí</b></a>  para conocer esos derechos y deberes.
           </p>
        
         </div>
@@ -98,7 +98,7 @@ Haz clic aquí para conocer esos derechos y deberes.
           <p>
             ¿Quieres profundizar aún más? ¡Descarga la cartilla de Fasecolda sobre Renta Vitalicia! Esta es una guía que te ayudará a aprender mucho más sobre este producto financiero.
           </p>
-          <p>Haz clic aquí para acceder a la cartilla.</p>
+          <p><a href="https://www.vivasegurofasecolda.com/cms/wp-content/uploads/2018/12/seguro_rentas_vitalicias.pdf" style="text-decoration: underline; color:#273e82;"><b class="font-bold">Haz clic aquí</b></a> para acceder a la cartilla.</p>
        
         </div>
       </div>
