--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -189,6 +189,16 @@
         </li>
         <li>
           <a
+            href="/assets/documentos/ASULADO_Terceros_para_compartir_informacion.pdf"
+            target="_blank"
+            class="dest"
+            aria-current="page"
+          >
+          Terceros con los que compartimos tu información
+          </a>
+        </li>
+        <li>
+          <a
             href="/assets/documentos/SGC-PO10 Estatutos Asulado v2.pdf"
             target="_blank"
             class="dest"
@@ -271,6 +281,11 @@
         <li>
           <a href="/suscribete" class="dest" aria-current="page">
             Manejar mi suscripción
+          </a>
+        </li>
+        <li>
+          <a href="/educacion_financiera" class="dest" aria-current="page">
+            Educacion financiera
           </a>
         </li>
       </ul>
