--- a/src/partials/gobierno/5_altagerencia.html
+++ b/src/partials/gobierno/5_altagerencia.html
@@ -66,7 +66,7 @@
               beneficios a nuestros clientes. Además, impulsamos la visión
               estratégica y el crecimiento sostenible, analizando posibles
               riesgos y oportunidades para garantizar la solvencia y viabilidad
-              de la compañía."
+              de la Compañía."
             </p>
           </blockquote>
           <a
@@ -101,7 +101,7 @@
           <h6>Líder de Transformación</h6>
           <blockquote>
             <p>
-              "Promovemos la transformación de la compañía para que opere de
+              "Promovemos la transformación de la Compañía para que opere de
               manera digital, gestionando los proyectos a partir de la
               estrategia, potenciando la innovación, automatización y mejora de
               los procesos. Somos un engranaje, que pone a disposición las
@@ -148,7 +148,7 @@
               cliente desde la innovación y la eficiencia, garantizando la
               operación de ASULADO y poniendo a disposición de nuestros
               usuarios, canales de atención digitales con calidad y oportunidad
-              que promueven la continuidad y sostenibilidad de la compañía."
+              que promueven la continuidad y sostenibilidad de la Compañía."
             </p>
           </blockquote>
           <a
@@ -187,8 +187,8 @@
               ASULADO es nuestro propósito. Cuidando la experiencia y
               garantizando una oferta de valor al empleado, potenciamos el
               compromiso y favorecemos una cultura sólida y coherente que
-              apalanca el logro de los objetivos, tanto de la organización, como
-              de sus integrantes. Aquí, más que hacer parte de una compañía, es
+              apalanca el logro de los objetivos, tanto de la Organización, como
+              de sus integrantes. Aquí, más que hacer parte de una Compañía, es
               la oportunidad para ser impulsores del cambio, motivados por un
               propósito misional que impacta a toda una industria y un país"
             </p>
@@ -228,7 +228,7 @@
               "Inspiramos a los demás para trabajar bajo los pilares de la
               confianza y la transparencia para asegurar, desde el
               acompañamiento, el cumplimiento normativo y la adecuada gestión
-              del sistema del control interno. Representamos a un área que está
+              del Sistema de Control Interno. Representamos a un área que está
               en permanente contacto con los equipos, junto a ellos lideramos y
               ejecutamos auditorías de los riesgos identificados y potenciales
               que impactan a la Compañía"
@@ -271,7 +271,7 @@
               técnicos, estratégicos, operacionales y tecnológicos que pueda
               enfrentar la Compañía. Trabajamos con todos los equipos de
               ASULADO, a quienes acompañamos en la identificación y la
-              prevención de los riesgos a los que se enfrenta la organización,
+              prevención de los riesgos a los que se enfrenta la Organización,
               para estar preparados a posibles desafíos y saberlos enfrentar de
               manera analítica, informada y efectiva"
             </p>
@@ -308,13 +308,13 @@
           <h6>Líder de Tecnología y Datos</h6>
           <blockquote>
             <p>
-              Fomentamos la evolución tecnológica con el fin de optimizar la
+              "Fomentamos la evolución tecnológica con el fin de optimizar la
               eficiencia operativa, incrementar el valor y fortalecer la
               sostenibilidad del negocio. Logramos este propósito al incorporar
               tecnologías avanzadas, soluciones emergentes, analítica de datos y
-              ciberseguridad en los procesos de la compañía para operar
+              ciberseguridad en los procesos de la Compañía para operar
               digitalmente, manteniendo siempre la alineación con los objetivos
-              estratégicos de ASULADO.
+              estratégicos de ASULADO."
             </p>
           </blockquote>
           <a
@@ -349,13 +349,9 @@
           <h6>Líder Jurídico</h6>
           <blockquote>
             <p>
-              "Mas allá de buscar la seguridad jurídica en la compañía,
-              brindamos confianza, protegemos los intereses de la organización y
-              sus públicos de interés, lo hacemos asegurando el cumplimiento del
-              marco legal y código de buen gobierno corporativo. Somos aliados
-              estratégicos del negocio, buscando nuevas oportunidades e incidir
-              en la regulación a favor de las necesidades de la compañía, de
-              nuestros afiliados y la industria."
+              “Más allá de buscar la seguridad jurídica en la Compañía, brindamos confianza, protegemos los intereses de la Organización y sus públicos de interés, siempre asegurando el cumplimiento del marco legal y el código de buen Gobierno Corporativo.
+              Somos aliados estratégicos del negocio, buscando nuevas oportunidades e incidir en la regulación a favor de las necesidades de la Compañía, de nuestros afiliados y la industria.”
+              
             </p>
           </blockquote>
           <a
